--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ footer{
   <button onclick="createZip()">Create ZIP</button>
 
   <small>
-    • type "900003_photo.jpg" in box.<br>
+    • Type "900003_photo.jpg" in box.<br>
     • Supports all images<br>
-    • All uotput images will reduce ,49KB<br>
+    • All uotput images will reduce <49KB<br>
     • All Output format JPG<br>
   </small>
 </div>
@@ -208,4 +208,5 @@ async function createZip() {
 </script>
 
 </body>
+
 </html>
